[package]
name = "tistow"
description = "The Informational Search Tool on Windows"
authors = ["NotNite"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { path = "./egui/egui" }
eframe = { path = "./egui/eframe" }
glutin = "0.28.0"
glow = "0.11.2"

clap = { version = "3.2.8", features = ["derive"] }
device_query = "1.1.1"

fuzzy-matcher = "0.3.7"
meval = "0.2"
walkdir = "2"
arboard = "2.1.1"
